3rd fix for box when scrolling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  min-height: 100%;
   margin: 0;
   min-width: 320px;
 }
